--- a/views/index.html
+++ b/views/index.html
@@ -10,11 +10,116 @@
     </div>
     <div id="slideDiv">
         <ul>
-            <li>TEAM5 <span class="blink" >«</span></p></li>
-            <li>태찬 <span class="blink" >«</span></p></li>
-            <li>한빈 <span class="blink" >«</span></p></li>
-            <li>현진 <span class="blink" >«</span></p></li>
-            <li>화섭 <span class="blink" >«</span></p></li>
+            <li> 
+                <p class="name"> 👍 TEAM 5 </p>
+                <br>
+                <br>
+                <p><a href="https://github.com/hb707/teamPJ">프로젝트 Github</a> <span class="blink" >«</span> </p>
+                <br>
+                <br>
+                <p>
+                    - 로그인 / 게시판 / 관리자페이지가 있는 웹사이트 구현<br>
+                    - 작업기간 : 1주일 (22/02/21 ~ 22/02/25)<br>
+                    - 사용 기술 <br>
+                        <span class="indent"></span>1. Back-End : Node.js, express, MySQL<br>
+                        <span class="indent"></span>2. Front-End : HTML, CSS, JS<br>
+                    - 진행 방식<br>
+                        <span class="indent"></span>1. 매일 5시 함께 그 날의 진행상황을 공유하는 시간을 가집니다. <br>
+                        <span class="indent"></span>2. 줌을 켜둔 상태로 작업을 하기때문에 서로간에 소통이 필요한 부분이 있다면 언제든 호출하여 의논합니다.<br>
+                </p>
+            </li>
+            <li>
+                <p class="name"> 😎 태찬 </p>
+                <br>
+                <br>
+                <p> <a href="https://github.com/taechanlim">Github</a> <span class="blink" >«</span> </p>
+                <br>
+                <br>
+                <p>
+                    안녕하세요 이번 팀 프로젝트의 5조 팀원 임태찬입니다. <br>
+                    저는 게시판을 담당했는데요 , DB Pool을 연결하고,<br>
+                    SQL구문을 이용한 CRUD작성을 구현해봤습니다.<br>
+                    이 게시판의 특징으로 말씀드리면<br>
+                    로그인이 안된상태에서는 게시판 접근이 불가능하고,<br>
+                    글을 보게되면 조회수가 올라가며 글 작성자가 아니면 글의<br>
+                    수정,삭제가 불가능하게 되어있습니다.<br>
+                    여러 이슈상황이 많았지만 팀원분들이 많이 도와주시고 git을 이용하여<br>
+                    팀프로젝트를 해보니까 정말 배운점이 많아서 보람찬 프로젝트였습니다. <span class="blink" >«</span>
+                </p>
+                <br>
+                <br>
+                <p>
+                    <span>@화섭 : 태찬님께서 쓰신 코드 많이 참고했어요 감사합니다~</span><br>
+                    <span>@현진 : 조용하게 코드를 완성시키는 추진력이 대단해요!</span><br>
+                    <span>@한빈 : 뚝딱하면 기능 하나 완성시켜주는 믿음직한 태찬님 👍 </span>
+                </p>
+            </li>
+            <li>
+                <p class="name"> 🔥 한빈 </p>
+                <br>
+                <br>
+                <p> <a href="https://github.com/hb707">Github</a> <span class="blink" >«</span> </p>
+                <br>
+                <br>
+                <p>
+                    이번 프로젝트에서 팀장을 맡은 한빈입니다. <br>
+                    저는 프론트를 담당했는데요 <br>
+                    그 외에도 git관리나 팀원들이 어려워하는 문제들을 함께 고민하며 프로젝트를 진행했고<br>
+                    큰 문제 없이 마무리를 지을 수 있었습니다.<br>
+                    없는 재주에 열심히 만들어 본 결과물이지만 직접 만들고 나니 애정이 생기네요. <br>
+                    처음 팀장으로 이끌어봤는데<br>
+                    첫 날엔 감을 못잡고 허둥대던 저를 응원해준 팀원들께 감사드립니다! <span class="blink" >«</span>
+                </p>
+                <br>
+                <br>
+                <p>
+                    <span>@화섭 : 가장 고생 많으셨어요 팀장님 끝까지 이끌어주셔서 감사합니다~</span><br>
+                    <span>@현진 : 다방면으로 팀을 이끌어준 멋진 리더! 고마워요!</span><br>
+                    <span>@태찬 : 모든 팀원들과 소통하며 잘 이끌어주신 팀장 한빈님 감사합니다!</span><br>
+                </p>
+            </li>
+            <li>
+                <p class="name"> 🥤 현진 </p>
+                <br>
+                <br>
+                <p> <a href="https://github.com/lhj12ps">Github</a> <span class="blink" >«</span> </p>
+                <br>
+                <br>
+                <p>
+                    담당 기능<br>
+                    - 백그라운드<br>
+                    - 회원가입,로그인,로그아웃,회원탈퇴<br>
+                    - 로그인시 세션생성,로그아웃시 세션삭제<br>
+                    - 데이터베이스와 자바스크립트 연결<br>
+                    - 데이터베이스에 졍보 삽입,삭제,검색 기능 <span class="blink" >«</span>
+                </p>
+                <br>
+                <br>
+                <p>
+                    <span>@화섭 : 깃 엄청 열심히 올리시고 내용수정도 활발하게 하신거 너무 멋있어요~ </span><br>
+                    <span>@태찬 : 엄청난 실력으로 담당하신 부분을 멋지게 완성해주신 현진님 감사합니다!</span><br>
+                    <span>@한빈 : 에러가 터지면 집요하게 파고들어 어떻게든 해결해내는 현진님 👍 </span>
+                </p>
+            </li>
+            <li>
+                <p class="name"> 👊 화섭 </p>
+                <br>
+                <br>
+                <p> <a href="https://github.com/LeeHwaSeob">Github</a> <span class="blink" >«</span> </p>
+                <br>
+                <br>
+                <p>
+                    관리자 페이지를 만들었습니다. <br>
+                    관리자로 로그인하면 유저 등급조절과 관리자 권한으로 게시판 글 삭제가 가능하도록 만들었습니다.  <span class="blink" >«</span>
+                </p>
+                <br>
+                <br>
+                <p>
+                    <span>@태찬 : 몸이 아프셨는데도 끝까지 책임감을 가지고 해주신 화섭님 감사합니다!</span><br>
+                    <span>@현진 : 아픈데도 끝까지 최선을 다하는 끈기가 멋있어요!</span><br>
+                    <span>@한빈 : 포기하지 않고 배우며 터득해나가는 화섭님 점점 실력이 느는게 보였어요 👍 </span>
+                </p>
+            </li>
         </ul>
     </div>
 </div>
