--- a/views/board/view.html
+++ b/views/board/view.html
@@ -6,8 +6,8 @@
         {% for item in list%}
         <tr class="title">
             <td class="idx">글번호 : {{item.idx}}</td>
-            <td class="'subject">글제목 : {{item.subject}}</td>
-            <td class="nickname">별명 : {{item.nickname}}</td>
+            <td class="'subject">제목 : {{item.subject}}</td>
+            <td class="viewNickname">글쓴이 : {{item.nickname}}</td>
             
         </tr>
         
