--- a/public/styleAdmin.css
+++ b/public/styleAdmin.css
@@ -61,6 +61,12 @@ td {
     color: #ffffff;
 }
 
+.check {
+    width: 50px;
+    height: 30px;
+    text-align: center;
+}
+
 .idx {
     width: 100px;
     height: 30px;
@@ -106,34 +112,45 @@ td {
     border-collapse: collapse;
 }
 
+#userList > td {
+    text-align: center;
+    width: 150px;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
+}
+
+.level {
+    color: #ffffff;
+}
+
+/* .select-active {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+} */
+
 .userId {
     width: 150px;
-    height: 30px;
-    text-align: center;
 }
 
 .userName {
     width: 150px;
-    height: 30px;
-    text-align: center;
 }
 
 .nickname {
     width: 150px;
-    height: 30px;
-    text-align: center;
 }
 
 .level {
-    width: 150px;
-    height: 30px;
-    text-align: center;
+    width: 60px;
 }
 
 .active {
-    width: 150px;
-    height: 30px;
-    text-align: center;
+    width: 100px;
+}
+
+.select-active {
+    width: 200px;
 }
 
 .smallBtn {
