--- a/public/styleBoard.css
+++ b/public/styleBoard.css
@@ -157,6 +157,12 @@
     line-height: 30px;
 }
 
+.viewNickname {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
 
 
 
@@ -218,7 +224,6 @@
     outline-style: none;
     border: none;
     font-size: 20px;
-    color: #666666;
 }
 
 textarea {
